adding person and owner
